--- a/index.mjml
+++ b/index.mjml
@@ -59,15 +59,19 @@
           align-item: center;
         }
 
+
         
       }
     </mj-style>
 
 
     <mj-attributes>
-      <mj-class name="logo" padding="0 0 0 10px"></mj-class>
+      <mj-class name="logo" padding="0 10px 0 10px"></mj-class>
+      <mj-navbar-link padding="0 25px" font-size="11px"></mj-navbar-link>
+      <mj-section padding="0" ></mj-section>
+      <mj-image padding="0"></mj-image>
+      <mj-social-element padding="10px"></mj-social-element>
 
-      <mj-navbar-link padding="0 30px" font-size="11px"></mj-navbar-link>
     </mj-attributes>
 
     <mj-style inline="inline">
@@ -88,47 +92,23 @@
 
 
 
-    <!-- <mj-include path="./components/header.mjml" /> -->
+    <mj-include path="./components/header.mjml" />
 
-    <mj-raw>
-      <!-- Company Header -->
-    </mj-raw>
-    <mj-section background-color="#FFFFFF">
-      <mj-column width="40%">
-        <mj-image align="left" width="150px" href="#" src="assets/img/kohlsLogo.png"></mj-image>
-      </mj-column>
-
-      <mj-column width="60%">
-        <mj-table>
-          <tr style="list-style: none;line-height:1">
-            <td>
-              <mj-text> <a href="#" style="color: #000000; text-decoration: none; padding: 0px;" width="100%" align="center">MY ACCOUNT</a></mj-text>
-            </td>
-            <td>
-              <mj-text> <a href="#" style="color: #000000; text-decoration: none; padding: 0px;" width="100%" align="center">CUSTOMER SERVICE</a></mj-text>
-            </td>
-          </tr>
-        </mj-table>
-      </mj-column>
-    </mj-section>
-
-
-    <!-- take components off when back in headermjml of this below -->
-    <mj-include path="./components/light-divider.mjml" />
+    
 
 
     <mj-raw>
       <!--  Menu Header -->
     </mj-raw>
-    <mj-section background-color="white" padding="8px">
+    <mj-section background-color="#FFFFFF" padding="11px">
       <mj-column>
-        <mj-navbar base-url="https://mjml.io" hamburger="hamburger" ico-color="#444">
-          <mj-navbar-link href="https://mjml.io">FOR THE HOME</mj-navbar-link>
+        <mj-navbar base-url="#" hamburger="hamburger" ico-color="#444" >
+          <mj-navbar-link href="#">FOR THE HOME</mj-navbar-link>
 
-          <mj-navbar-link href="https://mjml.io">WOMEN</mj-navbar-link>
-          <mj-navbar-link href="https://mjml.io">MEN</mj-navbar-link>
-          <mj-navbar-link href="https://mjml.io">KIDS</mj-navbar-link>
-          <mj-navbar-link href="https://mjml.io" color="#C70039">CLEARANCE</mj-navbar-link>
+          <mj-navbar-link href="#">WOMEN</mj-navbar-link>
+          <mj-navbar-link href="#">MEN</mj-navbar-link>
+          <mj-navbar-link href="#">KIDS</mj-navbar-link>
+          <mj-navbar-link href="#" color="#C70039">CLEARANCE</mj-navbar-link>
         </mj-navbar>
       </mj-column>
     </mj-section>
@@ -139,13 +119,13 @@
     <mj-raw>
       <!-- MAIN CONTENT  -->
     </mj-raw>
-    <mj-wrapper background-color="white" padding="40px 30px 40px 30px">
+    <mj-wrapper background-color="#FFFFFF" padding="40px 30px 40px 30px">
 
 
       <mj-raw>
         <!-- Order Intro text -->
       </mj-raw>
-      <mj-section background-color="white" padding="0 0 30px 0">
+      <mj-section background-color="#ffffff" padding="0 0 30px 0">
         <mj-column>
           <mj-text font-size="35px" padding="0" align="left">Order #6312324757</mj-text>
           <mj-text font-size="12px" padding="8px 0 0 0" align="left">Monday, November 28, 2022 at 11:19 PM Central Time
@@ -187,7 +167,7 @@
       </mj-raw>
       <mj-section background-color="white" padding="30px 0 20px 0">
         <mj-column width="25%">
-          <mj-image src="assets/img/space.png" alt="" width="100px" padding="0px" align="left" border="none"></mj-image>
+          <mj-image src="assets/img/space.png" alt="" width="100px" padding="8px" align="left" border="none"></mj-image>
         </mj-column>
         <mj-column width="35%">
           <mj-text font-size="13px" padding="0px" align="left" font-weight="bold">Space: From Near Earth Orbit to the Far Reaches of the Universe Book</mj-text>
@@ -213,7 +193,7 @@
       </mj-raw>
       <mj-section background-color="white" padding="10px 0 30px 0">
         <mj-column width="25%">
-          <mj-image src="assets/img/shoe.png" alt="" width="100px" padding="0px" align="left" border="none"></mj-image>
+          <mj-image src="assets/img/shoe.png" alt="" width="100px" padding="8px" align="left" border="none"></mj-image>
         </mj-column>
         <mj-column width="35%">
           <mj-text font-size="13px" padding="0px" align="left" font-weight="bold">New Balance DynaSoft Nergize v3 Women's Running Shoes</mj-text>
@@ -289,7 +269,7 @@
       <mj-raw>
         <!-- Payment Method Content DONE-->
       </mj-raw>
-      <mj-section background-color="#FFFFFF">
+      <mj-section background-color="#FFFFFF" padding="0 0 20px 0">
         <mj-column>
           <mj-table padding="0px 0 0px 0" font-size="12px">
             <tr style="list-style: none;line-height:1.5;">
@@ -444,7 +424,7 @@
       </mj-raw>
       <mj-section background-color="#FFFFFF">
         <mj-column>
-          <mj-table padding="0px 0 0px 0" font-size="12px">
+          <mj-table padding="30px 0 0px 0" font-size="12px">
             <tr style="list-style: none;line-height:1; font-weight:bold;">
               <td align="left">
                 <mj-text style="color: #000000; text-decoration: none; padding: 0px; text-align:right; font-size: 18px;">Order Total:</mj-text>
@@ -674,22 +654,22 @@
         <!-- TOP LINKS-->
       </mj-raw>
       <mj-section background-color="#f6f6f6" padding="10px 0 10px 0">
-        <mj-column padding="0 0 0 0" width="25%">
+        <mj-column padding="10px 0 10px 0" >
           <mj-text font-size="11px" padding="0 0 0 0" align="center">
             <a href="#" style="color: #404040; text-decoration: none; padding: 0px; ">KOHL'S CARDS</a>
           </mj-text>
         </mj-column>
-        <mj-column padding="0 0 0 0" width="25%">
+        <mj-column padding="10px 0 10px 0">
           <mj-text font-size="11px" padding="0 0 0 0" align="center">
             <a href="#" style="color: #404040; text-decoration: none; padding: 0px; ">CUSTOMER SERVICE</a>
           </mj-text>
         </mj-column>
-        <mj-column padding="0 0 0 0" width="25%">
+        <mj-column padding="10px 0 10px 0">
           <mj-text font-size="11px" padding="0 0 0 0" align="center">
             <a href="#" style="color: #404040; text-decoration: none; padding: 0px; ">FIND A STORE</a>
           </mj-text>
         </mj-column>
-        <mj-column padding="0 0 0 0" width="25%">
+        <mj-column padding="10px 0 10px 0">
           <mj-text font-size="11px" padding="0 0 0 0" align="center">
             <a href="#" style="color: #404040; text-decoration: none; padding: 0px; ">KOHL'S COUPON</a>
           </mj-text>
@@ -757,21 +737,15 @@
         <!-- Fineprint LINKS-->
       </mj-raw>
       <mj-section background-color="#f6f6f6" padding="15px 0px ">
-        <mj-column padding="0 0 0 0" width="45%">
-          <mj-text font-size="10px" padding="0 0 0 0" align="right" color="#404040">
-            <a href="#" style="color:#404040; text-decoration: none; padding: 0px;">SECURITY & PRIVACY POLICY</a>
+
+        <mj-column padding="10px 0 10px 0" >
+          <mj-text font-size="10px" padding="0 0 0 0" align="center">
+            <a href="#" style="color: #404040; text-decoration: none; padding: 0px; ">SECURITY & PRIVACY POLICY</a>
           </mj-text>
         </mj-column>
-
-        <mj-column width="10%">
-          <mj-text font-size="10px" padding="0 0 0 0" align="center" color="#404040">
-            |
-          </mj-text>
-        </mj-column>
-
-        <mj-column padding="0 0 0 0" width="45%">
-          <mj-text font-size="10px" padding="0 0 0 0" align="left" color="#404040">
-            <a href="#" style="color:#404040; text-decoration: none; padding: 0px; ">HASSEL-FREE RETURNS POLICY</a>
+        <mj-column padding="10px 0 10px 0">
+          <mj-text font-size="10px" padding="0 0 0 0" align="center">
+            <a href="#" style="color: #404040; text-decoration: none; padding: 0px; ">HASSEL-FREE RETURNS POLICY</a>
           </mj-text>
         </mj-column>
       </mj-section>
